--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,39 +11,72 @@
 	width: 100%;
 	height: 80px;
 	background-color: #4574FF;
-	gap: 270px;
+	gap: 330px;
 }
 
 .logo {
 	background-image: url(../../assets/da57e25179c34ce95b605ca7e79b7c4a.jpg)  ;
 	background-size: cover;
-	width: 40px;
-	height: 40px;
+	width: 50px;
+	height: 50px;
 	border: 2px saddlebrown solid;
+	border-radius: 5px 35px 0px 35px;
 }
 
 .input {
-	width: 200px;
+	width: 230px;
+	height: 35px;
 	padding: 5px;
 	border-radius: 5px;
-	
+	font-size: 17px;
 }
 
 .GLS {
 	display: flex;
 	align-items: center;
-	gap: 10px;
+	gap: 25px;
 	
 }
 
-.LS {
+.TLS {
 	display: flex;
-	padding: 7px;
+	gap: 15px;
+}
+
+.loginup,
+.singup {
+  	width: 65px;
+}
+
+.LS {
+	padding: 0px 10px;
+	line-height: 32px;
 	border-radius: 5px;
+	display: inline-block;
+	text-align: center;
+}
+
+.profile {
+  	display: flex;
 }
 
 .pro {
-	padding: 15px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 50px;
+	height: 50px;
+	padding: 0;
 	border-radius: 50%;
+	border: none;
+	background: transparent;
+	cursor: pointer;
 }
 
+.proicon {
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	object-fit: cover;
+
+}
