--- a/src/components/CreateCourse/CreateCourse.module.css
+++ b/src/components/CreateCourse/CreateCourse.module.css
@@ -1,29 +1,80 @@
+.img_title {
+	display: flex;
+	justify-content: space-around;
+}
+
+.box_title {
+    display: flex;
+	justify-content: center;
+	flex-direction: column;
+    align-items: center;
+    margin-right: 40%; 
+}
+
+.courseTitlePreview {
+    max-width: 300px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    word-break: break-word;
+	height: 40px;
+}
+
+
 .inputImg {
-  display: none;
+  	display: none;
 }
 
 .formUpload {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 150px;
-  width: 150px;
-  border-radius: 20px;
-  border: 1px dashed #999;
-  cursor: pointer;
-  overflow: hidden;
-  font-size: 16px;
-  text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+    background: linear-gradient(90deg, blue 50%, transparent 50%) 0 0 / 10px 3px repeat-x,
+                linear-gradient(180deg, blue 50%, transparent 50%) 100% 0 / 3px 10px repeat-y,
+                linear-gradient(270deg, blue 50%, transparent 50%) 0 100% / 10px 3px repeat-x,
+                linear-gradient(0deg, blue 50%, transparent 50%) 0 0 / 3px 10px repeat-y;
+
+    transition: filter .2s;
 }
 
 .formUpload:hover {
-  border-color: #de0611;
-  color: #de0611;
+    animation: borderRun 1s linear infinite;
+}
+
+@keyframes borderRun {
+    from {
+        background-position:
+            0 0,
+            100% 0,
+            0 100%,
+            0 0;
+    }
+    to {
+        background-position:
+            10px 0,
+            100% 10px,
+            -10px 100%,
+            0 -10px;
+    }
 }
 
 .imageOnButton {
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* картинка занимает всю кнопку без искажения */
-  border-radius: initial; /* чтобы совпадало с формой кнопки */
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: initial;
+}
+
+.title_course {
+	margin: 10px;
+	padding: 10px;
+	border-radius: 10px;
+	border-color: blue;
+	font-size: 15px;
 }
