--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,44 +1,69 @@
 * {
-	margin: 0%;
-	padding: 0%;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 .header {
-	padding: 0px 20px;
-	height: 70px;
-	background-color: rgb(255, 196, 141);
+	background-color: #499BEDE5;
+	width: 100%;
+	height: 100px;
+	border-radius: 50px;
 	display: flex;
 	justify-content: space-between;
     align-items: center;
+	padding: 0 20px;
 }
 
-.left_H {
+.left_header {
 	display: flex;
 	align-items: center;
-    justify-content: space-between;
-    gap: 15px;
+	gap: 15px;
 }
 
-/* .logo {
+.logo {
+	padding: 5px 10px;
+	width: 80px;
+	height: 60px;
+	border-radius: 14px;
+	background: #022E5B;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
-} */
+.logo img {
+	width: 40px;
+	height: auto;
+}
 
 .name_logo {
-	font-size: 20px;
-	font-family: "Comfortaa", sans-serif;
-	font-optical-sizing: auto;
-	font-weight: 700;
-	font-style: normal;
-
+	font-size: 40px;
+	line-height: 1;
+	letter-spacing: 0;
 }
 
-
-.rigth_H {
+.rigth_header {
 	display: flex;
-	gap: 30px;
-	margin-right: 50px;
+	align-items: center;
 }
 
-.catalog, .my_course, .profile {
-	font-size: 18px;
+.courses {
+	font-size: 30px;
+	line-height: 1;
+	letter-spacing: 0px;
 }
+
+.profile {
+	padding: 20px;
+	font-size: 30px;
+	line-height: 1;
+	letter-spacing: 0px;
+	border-radius: 15px;
+	border: 1px solid #000000 ;
+}
+
+
+
+
+
