--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,8 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
 
 .header {
 	background-color: #499BEDE5;
 	width: 100%;
-	height: 100px;
+	height: 75px;
 	border-radius: 50px;
 	display: flex;
 	justify-content: space-between;
@@ -18,49 +13,78 @@
 .left_header {
 	display: flex;
 	align-items: center;
-	gap: 15px;
+	gap: 10px;
 }
 
-.logo {
-	padding: 5npm px 10px;
-	width: 80px;
+.logo_container {
+	width: 60px;
 	height: 60px;
-	border-radius: 14px;
+	border-radius: 25px;
 	background: #022E5B;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-.logo img {
+.logo {
 	width: 40px;
 	height: auto;
 }
 
 .name_logo {
-	font-size: 40px;
+	color: var(--accent-dark);
+	font-size: 35px;
 	line-height: 1;
 	letter-spacing: 0;
+}
+
+.in_input {
+    width: 374px;
+    height: 45px;
+    border-radius: 30px;
+    background-color: #DAEAFF;
+    border: none;
+    outline: none;
+    
+    background-image: url('../../assets/Magnifying_glass.svg');
+    background-repeat: no-repeat;
+    background-position: 20px center;
+    background-size: 20px;
+    padding-left: 50px; 
+    font-size: 16px;
+    color: black; 
+}
+
+input::placeholder {
+    color: #909090;
+    font-family: "Ledger", serif;
+    font-size: 14px;
+    font-weight: 400;
+    opacity: 1;
 }
 
 .right_header {
 	display: flex;
 	align-items: center;
+	gap: 50px;
 }
 
 .courses {
-	font-size: 30px;
-	line-height: 1;
-	letter-spacing: 0px;
+    font-size: 20px;
+    line-height: 1;
+    letter-spacing: 0px;
+    color: var(--accent-dark); 
 }
 
 .profile {
-	padding: 20px;
-	font-size: 30px;
-	line-height: 1;
-	letter-spacing: 0px;
-	border-radius: 15px;
-	border: 1px solid #000000 ;
+    padding: 10px;
+    font-size: 22px;
+    line-height: 1;
+    letter-spacing: 0px;
+    border-radius: 15px;
+    border: 1px solid var(--accent-dark); 
+    color: var(--accent-dark);
+    transition: all 0.3s ease;
 }
 
 
